# obs-studio-cirun

.github/actions/build-obs/: action.yml
.github/actions/pip-cache/: action.yml
.github/actions/setup-tool/: action.yml
.github/workflows/: cirun.yml
cirun/: desktoprecord.py  ffmpeg_gen.py  firsttime.py  obs-firsttime.py  obs-secondtime.py  obsconfig.py  obsexec.py  obsplugin.py  obstest.py  requirements.txt  test_audio_monitor.py  test_audiobuffering.py  test_filters.py  test_plugins.py  test_plugins_ptz.py  test_projector.py  test_sources.py  test_stats.py  test_upload_log.py  test_volumemeter.py  test_ws.py  tiny.py  util.py
patch/: cmake-coverage.patch  cmake-json11-Wno-unqualified-std-cast-call.patch  libobs-video_t-encoded-video.patch  macos-force-allow-xcode-13.2.patch  macos-remove-xcbeautify.patch  obs-display-create-destroy-log.patch  qtdisplay-destroy-at-surface-event.patch  qtdisplay-slow-destroy.patch  test-dstr.patch  ubuntu-cmake-prefix-cf8a8cce72.patch  ubuntu-cmake-prefix.patch  ubuntu-cmake-unittest.patch
script/: workflow2env.py
test-extras/: CMakeLists.txt  list-plugins.c  module_has_qt.c  test-bmem.c  test-crash.c
test-extras/cmocka/: CMakeLists.txt  test_callback.c  test_circlebuf.c  test_config.c  test_crc32.c  test_darray.c  test_data.c  test_dstr.c  test_fourcc.c  test_graphics.c  test_mediaio.c  test_misc.c  test_obshpp.cpp  test_utf8.c
